--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div id="card">
       <img src="images/cheese.jpg" alt="CHEESE IS GOOD">
-      <h1>I WOULD EAT YOU FOR MORE CHEESE</h1>
+      <h1>I WOULD kill YOU FOR MORE CHEESE</h1>
       <ul id="CHEESE-yes">
         <li><label>Name</label>CHEESE</li>
         <li><label>Birthday</label>5500 BCE</li>
